Nidavellir version final

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/stylenuevo.css">
-    <link rel="shortcut icon" href="./fotos/favicon.ico">
+    <link rel="shortcut icon" href="./img/favicon-32x32.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald&family=Roboto&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-    <title>Nidavellir</title>
+    <title>Nidavellir| Videojuegos, Foros, Noticias y Más</title>
     <meta name="description" content="Enterate de las ultimas noticias de los videojuegos y tecnologia, las ultimas noticias gaming, lanzamientos esperados, guías y más.">
     <meta name="keywords"  content="Ultimas noticias, gaming, tecnologia y consolas, ultimas noticias de videojuegos, ultimas noticias gamer">
 </head>
@@ -34,13 +34,22 @@
         <main class="main">
             <section  class="contenido">
                 <h1 class="titulonoti">
-                    Overwatch 2 ya llegó!
+                    La serie de God of War confirmada! y sera por Amazon
                 </h1>
+                <p>
+                    Lo que hace unos meses fue adelantado por fuentes confiables hoy es oficial: Amazon hará una serie de God of War, la famosa y exitosa franquicia de PlayStation cuya más reciente entrega ―God of War: Ragnarök― recibió varios premios en The Game Awards 2022. Click en la foto para leer más.
+                </p>
+                <div class="Imagennoti">
+                    <a href="./pags html/noticias.html"><img src="img/kratos.jpg" alt="Kratos, God of War"></a>
+                </div>
+                <h2 class="titulonoti">
+                    Overwatch 2 ya llegó!
+                </h2>
                 <p>
                     El shooter en primera persona de la compañía Blizzard Entertainment se ha convertido en free to play y está disponible para todos en todas las plataformas (Pc, PS 4 y 5, Xbox X y serie S y en Nintendo Switch). Con pequeños cambios como el modo principal ahora es 5 vs 5, nuevos mapas, un pase de batalla, un modo historia que será lanzado en 2023, horarios de mapa diferentes e incluyendo a tres nuevos héroes que en total dan 35 personajes jugables.
                 </p>
                 <div class="Imagennoti">
-                    <a href="https://overwatch.blizzard.com/es-es/" target="_blank"><img src="img/ow2info.png"><a>
+                    <a href="https://overwatch.blizzard.com/es-es/" target="_blank"><img src="img/ow2info.png" alt="Overwatch 2"><a>
                 </div>
                 <h2 class="titulonoti">
                     los Sims 4 free to play ahora
@@ -49,7 +58,13 @@
                     Los Sims 4 el juego de simulación social y de vida de la compañía Electronic Arts se ha convertido en free to play para pc y consolas sin ningún tipo de coste. Pero debemos decirte que solo es el <b>juego base</b> para sus casi 60 dlcs deberás pagar unos $118mil pesos argentinos. Pero aun así es un título que vale la pena jugar. Sobre todo gracias a esto se ha confirmado los Sims 5
                 </p>
                 <div class="Imagennoti">
-                    <a href="https://store.steampowered.com/app/1222670/The_Sims_4/" target="_blank">Descargalo desde steam <img src="img/Sims4info.png"></a>
+                    <a href="https://store.steampowered.com/app/1222670/The_Sims_4/" target="_blank">Descargalo desde steam <img src="img/Sims4info.png" alt="Sims 4"></a>
+                </div>
+                <h3 class="titulonoti">
+                    Mi contacto y Nidavellir:
+                </h3>
+                <div class="Imagennoti">
+                    <a href="./pags html/contacto.html"><img src="img/contactopag.jpg" alt="Kratos, God of War"></a>
                 </div>
             </section>
         </main>
@@ -58,7 +73,7 @@
                 Recordatorio:
             </h1>
             <p class="parrafoaside">
-                Puedes clickear en estas imágenes y te llevarán a un sitio oficial donde descargar el tema de la noticia.
+                Puedes clickear en algunas de estas imágenes y te llevarán a un sitio oficial donde descargar el tema de la noticia.
             </p>
         </aside>
         <!--El footer-->
@@ -66,9 +81,12 @@
             <h3 class="titulofooter">
                 Contacto
             </h3>
+            <h4>
+
+            </h4>
             <div class="redesfooter">
-                <a href="https://instagram.com/nidavellir_hisoyadan?igshid=YmMyMTA2M2Y=" target="blank"><p>Instagram</p></a>
-                <a href="https://www.tiktok.com/@nidavellir_hisoyadan?_t=8Wj4zoaYOpR&_r=1" target="blank"><p>Tiktok</p></a>
+                <a href="https://instagram.com/nidavellir_hisoyadan?igshid=YmMyMTA2M2Y=" target="blank"> <img src="../img/instagramlogo.png" width="45px" height="45px"></a>
+                <a href="https://www.tiktok.com/@nidavellir_hisoyadan?_t=8Wj4zoaYOpR&_r=1" target="blank"> <img src="../img/tiktoklogo.png" width="45px" height="45px"></a>
             </div>
             <div class="copy">
                 <small>&copy; 2022 <b>Nidavellir</b> - Todos los derechos reservados</small>
