--- a/pags html/galeria.html
+++ b/pags html/galeria.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/stylenuevo.css">
-    <link rel="shortcut icon" href="./fotos/favicon.ico">
+    <link rel="shortcut icon" href="../img/favicon-32x32.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald&family=Roboto&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-    <title>Nidavellir</title>
+    <title>Galeria de wallpapers y screenshots de tus videojuegos|Nidavellir</title>
     <meta name="description" content="Galeria de iagenes de overwatch 2 y juegos, wallpapers de overwatch 2 libres de uso.">
     <meta name="keywords"  content=" Wallpapers, Wallpapers overwatch 2, Wallpapers ow2, Wallpapers free, Wallpapers gratis, screenshots, Overwacht 2">
 </head>
