--- a/pags html/noticias.html
+++ b/pags html/noticias.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/stylenuevo.css">
-    <link rel="shortcut icon" href="./fotos/favicon.ico">
+    <link rel="shortcut icon" href="../img/favicon-32x32.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald&family=Roboto&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-    <title>Nidavellir</title>
+    <title>Las últimas Noticias sobre gaming y tecnología |Nidavellir</title>
     <meta name="description" content="Ultimas noticias de videojuegos, las ultimas noticias gaming, lanzamientos esperados, nuevas tarjetas graficas y procesadores, peliculas y series de videjuegos.">
     <meta name="keywords"  content="Noticias gaming, tecnologia y consolas, ultimas noticias de videojuegos, ultimas noticias gamer, Nvidia graficas, pc gaming, Ultimos lanzamientos">
 </head>
@@ -33,6 +33,15 @@
         </section>
         <main class="main">
             <section class="contenido">
+                <h1 class="titulosecnoticias">
+                    La serie de God of War confirmada! y sera por Amazon
+                </h1>
+                <p>
+                    Lo que hace unos meses fue adelantado por fuentes confiables hoy es oficial: Amazon hará una serie de God of War, la famosa y exitosa franquicia de PlayStation cuya más reciente entrega ―God of War: Ragnarök― recibió varios premios en The Game Awards 2022.Por medio de redes sociales, las cuentas oficiales de Prime Video confirmaron que están trabajando en una serie de God of War. Como puedes imaginar, se trata de una producción que estará basada en la famosa serie de videojuegos de PlayStation.En específico, la serie de God of War para Prime Video se enfocará en la saga nórdica de Kratos y Atreus. Esto quiere decir que seguirá al Fantasma de Sparta en su autoexilio de Grecia en el cual busca redención y tranquilidad. Dicho esto, una vez que su esposa muere inicie un viaje con su hijo para cumplir el último deseo de su gran amor."Kratos emprende un peligroso viaje con su distanciado hijo para esparcir [las] cenizas desde la cima más alta: el último deseo de su esposa. Kratos pronto se da cuenta de que el viaje es una búsqueda épica disfrazada, que pondrá a prueba los lazos entre padre e hijo, y obligará a Kratos a luchar contra nuevos dioses y monstruos por el destino del mundo", señala la sinopsis de la serie de God of War para Prime Video.
+                </p>
+                <div class="imagennoti">
+                    <img src="../img/kratos.jpg">
+                </div>
                 <h1 class="titulosecnoticias">
                     Overwatch 2 Revela su nuevo tanque Ramattra y se confirma la fecha de su segunda temporada
                 </h1>
