--- a/pags html/contacto.html
+++ b/pags html/contacto.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/stylenuevo.css">
-    <link rel="shortcut icon" href="./fotos/favicon.ico">
+    <link rel="shortcut icon" href="../img/favicon-32x32.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald&family=Roboto&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-    <title>Nidavellir</title>
+    <title>Contacto, redes sociales y registro |Nidavellir</title>
     <meta name="description" content="Pagina de contacto de Nidavellir encontraras mi instagram y tiktok donde se sube info, memes, virales del mundo gaming.">
     <meta name="keywords"  content="Contacto, Nidavellir redes sociales, Instagram Nidavellir">
 </head>
@@ -57,8 +57,8 @@
                     Por acá abajo te dejo mis redes donde subo contenido variado como memes, clips, info. Últimamente estoy más conectado en Tiktok pero puedes contactarme por ambas redes.
                 </p>
                 <div class="redessocia">
-                    <a class="redes" href="https://instagram.com/nidavellir_hisoyadan?igshid=YmMyMTA2M2Y=" target="blank"> <img src="../img/instagramlogo.png" ></a>
-                    <a class="redes" href="https://www.tiktok.com/@nidavellir_hisoyadan?_t=8Wj4zoaYOpR&_r=1" target="blank"> <img src="../img/tiktoklogo.png" ></a>
+                    <a class="redes" href="https://instagram.com/nidavellir_hisoyadan?igshid=YmMyMTA2M2Y=" target="blank"> <img src="../img/contactoinsta.png" ></a>
+                    <a class="redes" href="https://www.tiktok.com/@nidavellir_hisoyadan?_t=8Wj4zoaYOpR&_r=1" target="blank"> <img src="../img/contactotiktok.png" ></a>
                 </div>
             </section>
             <!----Inicio de formulario------>
