--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
 
             </h4>
             <div class="redesfooter">
-                <a href="https://instagram.com/nidavellir_hisoyadan?igshid=YmMyMTA2M2Y=" target="blank"> <img src="../img/instagramlogo.png" width="45px" height="45px"></a>
-                <a href="https://www.tiktok.com/@nidavellir_hisoyadan?_t=8Wj4zoaYOpR&_r=1" target="blank"> <img src="../img/tiktoklogo.png" width="45px" height="45px"></a>
+                <a href="https://instagram.com/nidavellir_hisoyadan?igshid=YmMyMTA2M2Y=" target="blank"> <img src="img/instagramlogo.png" width="45px" height="45px"></a>
+                <a href="https://www.tiktok.com/@nidavellir_hisoyadan?_t=8Wj4zoaYOpR&_r=1" target="blank"> <img src="img/tiktoklogo.png" width="45px" height="45px"></a>
             </div>
             <div class="copy">
                 <small>&copy; 2022 <b>Nidavellir</b> - Todos los derechos reservados</small>
